[tool.poetry]
name = "station-randomizer"
version = "0.1.0"
description = ""
authors = ["maxomm <max.warsinke@googlemail.com>"]

[tool.poetry.dependencies]
python = "3.10.8"
streamlit = "^1.13.0"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.4"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
