[tool.poetry]
name = "station-randomizer"
version = "0.1.0"
description = ""
authors = ["maxomm <max.warsinke@googlemail.com>"]
readme = "README.md"
packages = [{include = "station_randomizer"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.16.0"
pandas = "^1.5.2"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
